<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottomSheetFeeling"
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomsheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/feel"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorText"
        android:drawableRight="@drawable/ic_cancle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/red"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnHappy"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/ic_happy"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnCute"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/cute"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cute"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnSad"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/sad"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnAngry"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/angry"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="italic"
                android:layout_marginTop="@dimen/_5sdp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnQuestion"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/question" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/question"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvFeeling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:textStyle="italic"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnNotChoose"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:text="@string/not_choose"
        android:background="@drawable/button"
        android:textSize="14sp"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_30sdp"
        android:visibility="gone"/>

</LinearLayout>