<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/bottomSheetContainerStudent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottomsheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Information"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/colorText"
        android:drawableRight="@drawable/ic_cancle"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_95sdp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bsimgAcountStudent"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            app:civ_border_width="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            app:civ_border_color="@color/red"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/bstvAcount_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Acount_Name"
                android:layout_margin="@dimen/_3sdp"
                android:textSize="16sp"
                android:textColor="@color/colorText"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/lnExperient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/bstvAcount_name">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:text="@string/Study"
                    android:textSize="16sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>

                <TextView
                    android:id="@+id/bstvStudy"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/Study"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnSubjects"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnExperient">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:text="@string/Subject_Student"
                    android:textSize="16sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvSubject"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Subject_Student"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/_15sdp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lnGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnSubjects">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.5"
                    android:text="@string/Gender_Bottom_Sheet"
                    android:textColor="@color/red"
                    android:textSize="16sp" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvGender"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Gender"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/_15sdp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/lnGender">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2.5"
                    android:layout_height="wrap_content"
                    android:text="@string/Age_Bottom_Sheet"
                    android:textSize="16sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.2"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textStyle="bold"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/bstvAge"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:hint="@string/Age"
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/_15sdp"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/header_background_profile"
        android:drawableLeft="@drawable/find_teacher"
        android:gravity="center"
        android:drawableTint="@color/red"
        android:padding="@dimen/_5sdp"
        android:text="@string/Detail_Bottom_Sheet"
        android:textColor="@color/colorText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvDirection"
        android:background="@drawable/header_background_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Direction_Bottom_Sheet"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:drawableLeft="@drawable/find_class"
        android:drawableTint="@color/red"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"/>

</LinearLayout>