<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:id="@+id/user">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginTop="@dimen/_100sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:background="@drawable/logo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logo"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_35sdp"
                        android:textStyle="bold|italic" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableLeft="@drawable/ic_person"
                    android:background="@drawable/boder_button"
                    android:textSize="14sp"
                    android:padding="@dimen/_8sdp"
                    android:inputType="number"
                    android:textColor="@color/colorText"
                    android:hint="@string/number_phone"
                    android:drawablePadding="@dimen/_8sdp"/>
                <LinearLayout
                    android:id="@+id/codeOTP"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorText"
                        android:textSize="14sp"
                        android:text="@string/code_OTP"
                        android:drawableLeft="@drawable/ic_otp"
                        android:drawablePadding="@dimen/_8sdp"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">
                        <EditText
                            android:id="@+id/edtNumcode1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/edtNumcode2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/edtNumcode3"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/edtNumcode4"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/edtNumcode5"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>

                        <EditText
                            android:id="@+id/edtNumcode6"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="@dimen/_30sdp"
                            android:background="@drawable/boder_button"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"
                            android:maxLength="1"
                            android:inputType="number"/>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btnResentOTP"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="right"
                        android:background="@drawable/button"
                        android:text="@string/resent_code_OTP"
                        android:textAllCaps="false"
                        android:layout_margin="@dimen/_5sdp"
                        android:textColor="@color/red"/>
                </LinearLayout>
                <Button
                    android:id="@+id/btnOTP"
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:text="@string/Get_Code_OTP"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:textColor="@color/red"
                    android:background="@drawable/button"/>
                <TextView
                    android:id="@+id/tvNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Notice"
                    android:layout_margin="@dimen/_10sdp"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/Load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/crystalLight"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
    </FrameLayout>
</layout>